# sailfish-device-encryption-community-wizard

./: CMakeLists.txt  README.md
qml/: Key.qml  Keyboard.qml  MainPage.qml  PasswordEntryDialog.qml  PasswordPage.qml  PasswordTypePage.qml  SetEncryptPage.qml  main.qml
rpm/: sailfish-device-encryption-community-wizard.spec
src/: main.cpp  system.cpp  system.h
systemd/: sailfish-device-encryption-community-wizard.service
translations/: en.ts  es.ts  pl.ts
